# microcosmic-god

./: .gitignore  ARCHITECTURE.md  PROJECT_BRIEF.md  README.md  audit.md  pyproject.toml
analysis/notebooks/: microcosmic_god_colab_a100_run.ipynb
analysis/scripts/: arc_report.py  inspect_sae.py  story_report.py  summarize_run.py  train_checkpoint_sae.py
archives/brains/seed21_o470/: ARCHIVE_NOTE.json  brain_t00001000_o470_interval_champion.json  brain_t00001390_o470_death_starvation.json
archives/brains/seed63_run204018/: ARCHIVE_NOTE.json  brain_t00001000_o411_interval_tool_champion.json  brain_t00001689_o1958_final_overall_champion.json  brain_t00001689_o3174_final_learner_champion.json  checkpoint_sae.npz  (+3 more)
docs/: EVENT_MONITORING.md  GENERALITY_AND_SCALING.md  HANDOFF.md  LANGUAGE_RUNWAY.md  LEARNING_ARCHITECTURE.md  MACHINE_PROFILE.md  PHYSICS_KERNEL.md  TRANSFER_RUNWAY.md
examples/: interventions.example.json
microcosmic_god/: __init__.py  brain.py  checkpoints.py  cli.py  config.py  debrief.py  energy.py  evolution.py  genome.py  interventions.py  observer.py  organisms.py  runlog.py  simulation.py  world.py
microcosmic_god/backends/: __init__.py  contracts.py  cpu.py  torch_gpu.py
side_projects/: README.md
side_projects/universal_genesis/: README.md
tests/: test_causal_contracts.py
transfer/: README.md  _run_v2_skeptic.py  catch_transfer.ipynb
transfer/sample_brains/: final_overall_champion.json  final_tool_champion.json  learner_champion_hidden14.json  v2_multiworld_learner_champion.json  v2_multiworld_overall_champion.json
